[gd_scene load_steps=2 format=3 uid="uid://6sitby0huoht"]

[ext_resource type="Script" path="res://scenes/GUI.gd" id="1_jav1e"]

[node name="GUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jav1e")

[node name="ScoreDisplay" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.0182292
anchor_top = 0.0287037
anchor_right = 0.0927083
anchor_bottom = 0.0657407
text = "SCORE:"

[node name="MultiplierDisplay" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.0182292
anchor_top = 0.0583333
anchor_right = 0.0927083
anchor_bottom = 0.0953704
text = "MULTIPLIER: X1"

[node name="ComboDisplay" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_left = 0.915104
anchor_top = 0.0583333
anchor_right = 0.989583
anchor_bottom = 0.0953704
size_flags_horizontal = 4
text = "COMBO X"

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.494118, 0.772549, 0.47451, 1)

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 512
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 512
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="FX" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FX
"
horizontal_alignment = 1
uppercase = true

[node name="GridContainer2" type="GridContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 32
columns = 2

[node name="CamShakeLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
text = "Camera Shake"

[node name="CamShakeSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/GridContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Audio" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio
"
horizontal_alignment = 1
uppercase = true

[node name="GridContainer" type="GridContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 100
columns = 2

[node name="MusicLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Menu/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="HealthDisplay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="HealthMargin" type="MarginContainer" parent="HealthDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 100

[node name="HealthContainer" type="GridContainer" parent="HealthDisplay/HealthMargin"]
layout_mode = 2

[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Menu/MarginContainer/VBoxContainer/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
